# goit_dsml-hw-03

Task1/scrapy_task1/: scrapy.cfg
Task1/scrapy_task1/scrapy_task1/: authors.json  items.py  middlewares.py  pipelines.py  settings.py
Task1/scrapy_task1/scrapy_task1/spiders/: get_quotes.py
Task2/task2/: pyproject.toml  requirements.txt  task2.py
