[tool.poetry]
name = "task2"
version = "0.1.0"
description = ""
authors = ["OlexandrYakovenko <154465467+OlexandrYakovenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bson = "^0.5.10"
pymongo = "^4.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
